--- a/style.css
+++ b/style.css
@@ -15,9 +15,19 @@ h3 {
     font-family: Yeseva One;
     font-style: normal;
     font-weight: normal;
-    text-transform: uppercase;
     margin: 0;
-    color: white;
+    text-transform: uppercase;
+    color: white; 
+}
+
+
+h4 {
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+    margin: 0 0 0 34px; 
 }
 h1 {
     font-size: 4rem;
@@ -28,6 +38,7 @@ h2 {
     font-size: 27px;
     line-height: 37px;   
 }
+
 /*----------------------------------
                HEADER
 ----------------------------------*/
@@ -97,9 +108,9 @@ button {
 .btn-submit {
     padding: 13px 75px;
     font-size: 1.3rem;
-    line-height: 2.7rem;
-    
+    line-height: 2.7rem;  
 }
+
 /*----------------------------------
                SECTION HOME
 ----------------------------------*/
@@ -217,7 +228,7 @@ button {
 }
 
 .section-control-div-image {
-    margin: 30px auto 60px auto;
+    margin: 0px auto 60px auto;
     height: 434px;
     width: 817px;
     background-image: linear-gradient(rgba(3, 3, 3, 0.8),rgba(3, 3, 3, 0.8)),url(img/img-control.png);
@@ -227,8 +238,12 @@ button {
     position: relative;
     top: 33%;
 }
-.section-control-div-camPicture hr,
-section-control-div-camPicture img {
+.section-div-Picture {
+    margin-top: 12px;
+    margin-bottom: 30px;
+}
+.section-div-Picture hr,
+section-div-Picture img {
     display: inline-block;  
 }
 .section-control-textBig {
@@ -240,6 +255,7 @@ section-control-div-camPicture img {
 
 form {
     margin-top: 90px;
+    margin-bottom: 100px;
     
 }
 form label {
@@ -279,13 +295,61 @@ form label {
     margin-top: 30px;
 }
 form input[type="checkbox"] {
-        display: none;
+    display: none;
     }
 form input[type="checkbox"]:checked+.checkbox-label::before {
-    content: url(img/checkmark.png);
-    
-    
-    
-  
+    content: url(img/checkmark.png);    
+}
+
+/*--------------------------------------------
+               SECTION TYPES OF REPAIR
+--------------------------------------------*/
+
+.section-types-of-repair h3 {
+    font-size: 2rem;
+    line-height: 2.8rem;
+    color: black;
+}
+.section-types-of-repair-div {
+    display: flex;
+}
+.one-of-three {
+    width: 392px;
+    height: 421;
+    margin: 15px;
+}
+.one-of-three h3 {
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+    color: white;
+}
+.repair-background-one {
+    background: url(img/img-repair-1.jpg)
+}
+.repair-background-two {
+    background: url(img/img-repair-2.jpg)
+}
+.repair-background-three {
+    background: url(img/img-repair-3.jpg)
+}
+.repair-describe-box {
+    width:300px;
+    height: 243px;
+    background: white;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+    margin: 294px auto 0 auto;
+    padding: 25px 0px 0 0;
     
 }
+.repair-describe-box ul {
+    padding-inline-start: 54;
+    font-size: 1.3rem;
+    line-height: 2.7rem;
+    color: #959595;
+    margin: 0;
+}
+.repair-describe-box button {
+    margin-top: 23px;
+}
+
+ 
