--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ h4 {
     font-style: normal;
     font-weight: normal;
     font-size: 1.8rem;
-    line-height: 2.5rem;
-    margin: 0 0 0 34px; 
+    line-height: 2.5rem; 
 }
 h1 {
     font-size: 4rem;
@@ -341,6 +340,11 @@ form input[type="checkbox"]:checked+.checkbox-label::before {
     padding: 25px 0px 0 0;
     
 }
+.repair-describe-box h4 {
+    margin: 0 0 0 34px;
+    
+}
+
 .repair-describe-box ul {
     padding-inline-start: 54;
     font-size: 1.3rem;
@@ -349,7 +353,72 @@ form input[type="checkbox"]:checked+.checkbox-label::before {
     margin: 0;
 }
 .repair-describe-box button {
-    margin-top: 23px;
+    margin-top: 25px;
+    padding: 10px 25px;
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
 }
+.section-types-of-repair-div-2 {
+    width: 1440px;
+    height: 700px;
+    border: solid 1px red;
+    margin: 300px auto 0 auto;
+    background: url(img/img-left-background.png);
+    background-repeat: no-repeat;
+    
+}
+.section-types-of-repair-div-left {
+    display: inline-block;
+    width: 527px;
+    height: 539px;
+    padding-top: 90px;
+    padding-left: 240px;
+    border: solid 1px green;
+    
+}
+.repair-feature {
+    display: flex;
+    align-items: center;
+    margin-bottom: 90px;
+}
+
+.repair-feature-num {
+    display: inline-block;
+    width: 42px;
+    height: 42px;
+    color: white;
+    background-color: #E3B873;
+    
+    text-align: center;
+    font-size: 18px;
+    line-height: 42px;
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    
+    border: solid 8px white;
+    border-radius: 50%;        
+}
+.repair-feature-text {
+    margin-left: 20px;
+    max-width: 316px;
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+}
+.section-types-of-repair-div-right {
+    display: inline-block;
+    width: 527px;
+    height: 539px;
+    border: solid 1px yellow;
+    
+}
+.section-types-of-repair-form {
+    display: inline-block;
+    height: 506px;
+    width: 509px;
+    background-color: black;
+    margin: 0;
+    
+}
+
 
  
