--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ form input[type="checkbox"]:checked+.checkbox-label-2::before {
     align-items: center;
     width: 1440px;
     height: 700px;
-    border: solid 1px red;
+    /*border: solid 1px red;*/
     margin: 300px auto 0 auto;
     background-repeat: no-repeat;
     
@@ -389,7 +389,7 @@ form input[type="checkbox"]:checked+.checkbox-label-2::before {
     height: 550px;
     padding-top: 100px;
     padding-left: 240px;
-    border: solid 1px green;
+    /*border: solid 1px green;*/
     background: url(img/image%206.1.png);
 }
 .repair-feature {
@@ -477,7 +477,6 @@ form input[type="checkbox"]:checked+.checkbox-label-2::before {
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
-
 }
 .note-to-pig-icon {
     width: 244px;
@@ -492,4 +491,57 @@ form input[type="checkbox"]:checked+.checkbox-label-2::before {
     justify-content: center;
     align-content: center;
     margin-top: 38px;
+}
+/*----------------------------------------------------------
+               SECTION WE REALIZE YOUR WILDEST FANTASIES
+-----------------------------------------------------------*/
+.section-wildest-fantasies {
+    margin-top: 200px;
+    height: 864px;
+    background-image:linear-gradient(rgba(3, 3, 3, 0.7),rgba(3, 3, 3, 0.7)), url(img/img-wildest-fantsies-bg.png);
+}
+.div-wildest-fantasies {
+    display: flex;
+}
+.div-wildest-fantasies-1 {
+    padding-top: 132px;
+    display: inline-block;
+    width: 490px;
+}
+.div-wildest-fantasies-1 ul {
+    max-width: 490px;
+    padding-inline-start: 0;
+    margin-top: 37px;
+    list-style-type: none;
+    font-size: 20px;
+    line-height: 49px;
+}
+
+.div-wildest-fantasies-1 ul li a {
+ color: white;
+    text-decoration: none;
+}
+
+#selected-li {
+    display: inline-block;
+    color: #E3B873;
+    border-bottom: solid 1px #E3B873;
+}
+.div-wildest-fantasies-2 {
+    max-width: 356px;
+    display: inline-block;
+}
+.div-wildest-fantasies-3 {
+    margin-left: 43px;
+    max-width: 356px;
+    display: inline-block;  
+}
+.up-left-img {
+    margin-top: -40px;
+    margin-bottom: 39px;
+}
+.up-right-img {
+    margin-top: -120px;
+    margin-bottom: 39px;
+    
 }
